# DistributeTutorial

./: .gitignore  CMakeLists.txt
examples/: elementwise.mlir  resnet.mlir  transform.mlir
midend/include/Dialect/: CMakeLists.txt
midend/include/Dialect/MeshExt/: CMakeLists.txt  MeshExtTransformOps.h  MeshExtTransformOps.td
midend/include/Dialect/TransformExt/: CMakeLists.txt  TransformExtOps.h  TransformExtOps.td
midend/lib/Dialect/: CMakeLists.txt
midend/lib/Dialect/MeshExt/: CMakeLists.txt  MeshExtTransform.cc
midend/lib/Dialect/TransformExt/: CMakeLists.txt  TransformExt.cc  TransformExtOps.cc
tools/: CMakeLists.txt  distribute-opt.cc
